# asr_ivt

./: CMakeLists.txt  License.txt  README.md  package.xml
IVT/: CMakeLists.txt
IVT/cmake/: FindDC1394.cmake  FindDC1394V2.cmake  FindGTK2.cmake  FindIVT.cmake  FindOpenCV1.cmake  FindSVS.cmake  FindV4L.cmake
IVT/cmake/macros/: IVTMacros.cmake
IVT/cmake/templates/: IVTConfig.cmake.in  IVTConfigVersion.cmake.in  IVTFeatures.cmake.in  ivtgui_config.h.in  ivtopencv_config.h.in
IVT/doc/html/: contact.html  index.html  installation.html
IVT/files/: colors.txt
IVT/src/: CMakeLists.ivt.txt  CMakeLists.ivtgui.txt  CMakeLists.ivtopencv.txt  CMakeLists.ivtvideocapture.txt  CMakeLists.txt
IVT/src/Calibration/: Calibration.h  ExtrinsicParameterCalculator.cpp  StereoCalibration.h  Undistortion.cpp  UndistortionSimple.cpp  UndistortionSimple.h
IVT/src/Color/: ColorParameterSet.h  RGBColorModel.cpp
IVT/src/Contours/: ContourHelper.cpp  ContourHelper.h
IVT/src/DataProcessing/: MeanFilter.h  RANSAC.cpp
IVT/src/DataStructures/: DynamicArray.h  DynamicArrayTemplate.h  DynamicArrayTemplatePointer.h
IVT/src/DataStructures/KdTree/: KdTree.cpp  KdTree.h
IVT/src/Features/: FeatureSet.cpp  FeatureSet.h
IVT/src/Features/HarrisSIFTFeatures/: HarrisSIFTFeatureCalculator.cpp
IVT/src/Features/PatchFeatures/: PatchFeatureEntry.cpp  PatchFeatureEntry.h
IVT/src/Features/SIFTFeatures/: SIFTFeatureCalculator.cpp
IVT/src/Helpers/: Configuration.cpp  OptimizedFunctions.h  OptimizedFunctionsList.h  PerformanceLib.cpp  Quicksort.cpp  Timer.h  helpers.cpp
IVT/src/Image/: BitmapFont.h  ByteImage.cpp  ByteImage.h  CornerSubpixel.cpp  CornerSubpixel.h  FloatImage.cpp  FloatImage.h  IplImageAdaptor.cpp  PrimitivesDrawerCV.cpp  ShortImage.h  StereoMatcher.h
IVT/src/Interfaces/: MainWindowEventInterface.h  MainWindowInterface.h  RegionFilterInterface.h  VideoCaptureInterface.h
IVT/src/Math/: DoubleMatrix.cpp  DoubleVector.h  FloatMatrix.cpp  LinearAlgebra.cpp  LinearAlgebra.h  LinearAlgebraCV.cpp  LinearAlgebraCV.h  Matd.cpp  Math3d.h  Vecd.cpp
IVT/src/ObjectFinder/: HaarClassifierCV.cpp  HaarClassifierCV.h  ObjectColorSegmenter.cpp  ObjectFinder.h  ObjectFinderStereo.cpp
IVT/src/Structs/: ObjectDefinitions.h  Structs.h
IVT/src/Threading/: Event.h  Mutex.cpp  Mutex.h  ThreadBase.h  Threading.cpp  Threading.h
IVT/src/Tracking/: ICP.h  KLTTracker.cpp  KLTTracker.h  ObjectPose.cpp  POSIT.cpp  POSIT.h  RAPiD.cpp  Tracker2d3d.h
IVT/src/VideoAccess/: VideoReader.cpp  VideoReader.h  VideoWriterCV.cpp  VideoWriterCV.h
IVT/src/VideoCapture/: BitmapCapture.cpp  BitmapCapture.h  CVCamCapture.cpp  CVCamCapture.h  DragonFlyCapture.h  Linux1394Capture.cpp  Linux1394Capture2.cpp  QuicktimeCapture.cpp  SVSCapture.cpp  SVSCapture.h  TriclopsCapture.cpp  UncompressedAVICapture.cpp  UncompressedAVICapture.h  Unicap1394Capture.h  V4LCapture.cpp  V4LCapture.h  VFWCapture.cpp  VFWCapture.h
IVT/src/Visualizer/: OpenGLVisualizerControl.cpp  OpenInventorVisualizer.cpp
IVT/src/gui/: GLContext.h  OpenCVWindow.cpp  QTColorParameterWindow.cpp  QTColorParameterWindow.h  QTGLWindow.cpp  QTPainter.h  QTWindow.h
IVT/src/gui/Cocoa/: GLContext.m  GUIFactory.m
cmake/: FindCoin3D.cmake  FindSoQt.cmake  FindUnicap.cmake
src/: CMakeLists.ivt.txt  CMakeLists.ivtgui.txt  CMakeLists.ivtopencv.txt  CMakeLists.ivtvideocapture.txt  CMakeLists.txt  ivtgui_config.h
src/Calibration/: Calibration.cpp  DLTCalibration.cpp  DLTCalibration.h  ExtrinsicParameterCalculator.h  ExtrinsicParameterCalculatorCV.cpp  ExtrinsicParameterCalculatorCV.h  Rectification.cpp  Rectification.h  StereoCalibration.cpp  StereoCalibrationCV.cpp  StereoCalibrationCV.h  Undistortion.h
src/Classification/: NearestNeighbor.cpp  NearestNeighbor.h
src/Color/: Color.cpp  Color.h  ColorParameterSet.cpp  RGBColorModel.h
src/DataProcessing/: MeanFilter.cpp  Normalizer.cpp  RANSAC.h
src/DataStructures/: DynamicArray.cpp
src/DataStructures/KdTree/: KdPriorityQueue.h  KdStructs.h  KdUtils.h
src/Features/: FeatureEntry.h
src/Features/HarrisSIFTFeatures/: HarrisSIFTFeatureCalculator.h
src/Features/SIFTFeatures/: SIFTFeatureCalculator.h  SIFTFeatureEntry.h
src/Helpers/: BasicFileIO.cpp  BasicFileIO.h  Configuration.h  PerformanceLib.h  Timer.cpp  helpers.h
src/Image/: BitmapFont.cpp  ImageAccessCV.cpp  ImageAccessCV.h  ImageMapper.cpp  ImageMapper.h  ImageProcessor.cpp  ImageProcessor.h  ImageProcessorCV.cpp  ImageProcessorCV.h  IntImage.cpp  IntImage.h  IplImageAdaptor.h  PrimitivesDrawer.cpp  PrimitivesDrawer.h  PrimitivesDrawerCV.h  ShortImage.cpp  StereoMatcher.cpp  StereoVision.cpp  StereoVision.h  StereoVisionSVS.cpp  StereoVisionSVS.h
src/Interfaces/: FeatureCalculatorInterface.h  GUIInterface.h  ObjectClassifierInterface.h  ObjectEntryFilterInterface.h  RigidObjectTrackingInterface.h
src/Math/: DoubleMatrix.h  DoubleVector.cpp  FloatMatrix.h  FloatVector.cpp  FloatVector.h  Matd.h  Math2d.cpp  Math2d.h  Math3d.cpp  SVD.cpp  Vecd.h
src/Networking/: VCNet.h
src/ObjectFinder/: CompactRegionFilter.cpp  CompactRegionFilter.h  ObjectColorSegmenter.h  ObjectFinder.cpp  ObjectFinderStereo.h
src/ParticleFilter/: ParticleFilterFramework.cpp  ParticleFilterFramework.h  ParticleFilterFrameworkFloat.cpp  ParticleFilterFrameworkFloat.h
src/Threading/: Event.cpp  PosixThread.cpp  PosixThread.h  WindowsThread.cpp  WindowsThread.h
src/Tracking/: ICP.cpp  ObjectPose.h  RAPiD.h  Tracker2d3d.cpp
src/VideoCapture/: BitmapSequenceCapture.cpp  BitmapSequenceCapture.h  CMU1394Capture.cpp  CMU1394Capture.h  DragonFlyCapture.cpp  Linux1394Capture.h  Linux1394Capture2.h  OpenCVCapture.cpp  OpenCVCapture.h  OpenGLCapture.cpp  OpenGLCapture.h  QuicktimeCapture.h  TriclopsCapture.h  Unicap1394Capture.cpp
src/Visualizer/: OpenGLVisualizer.cpp  OpenGLVisualizer.h  OpenGLVisualizerControl.h  OpenInventorVisualizer.h
src/gui/: GLContext.cpp  GUIFactory.cpp  GUIFactory.h  OpenCVApplicationHandler.cpp  OpenCVApplicationHandler.h  OpenCVWindow.h  QTGLWindow.h  QTPainter.cpp  QTWindow.cpp
src/gui/win32/: Win32MainWindow.cpp  Win32MainWindow.h
(+17 files in other folders)
